--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -2,147 +2,107 @@ backend:
   name: git-gateway
   branch: master
   commit_messages:
-    create: "Create {{collection}} “{{slug}}”"
-    update: "Update {{collection}} “{{slug}}”"
-    delete: "Delete {{collection}} “{{slug}}”"
-    uploadMedia: "[skip ci] Upload “{{path}}”"
-    deleteMedia: "[skip ci] Delete “{{path}}”"
+    create: 'Create {{collection}} “{{slug}}”'
+    update: 'Update {{collection}} “{{slug}}”'
+    delete: 'Delete {{collection}} “{{slug}}”'
+    uploadMedia: '[skip ci] Upload “{{path}}”'
+    deleteMedia: '[skip ci] Delete “{{path}}”'
 
 local_backend: true
 media_folder: static/img
 public_folder: /img
 
 collections:
-  - name: "blog"
-    label: "Blog"
-    folder: "src/pages/blog"
+  - name: 'posts'
+    label: 'Posts'
+    folder: 'src/pages/novedades'
     create: true
-    slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
+    slug: '{{year}}-{{month}}-{{day}}-{{slug}}'
     fields:
-      - {
-          label: "Template Key",
-          name: "templateKey",
-          widget: "hidden",
-          default: "blog-post",
-        }
-      - { label: "Title", name: "title", widget: "string" }
-      - { label: "Publish Date", name: "date", widget: "datetime" }
-      - { label: "Description", name: "description", widget: "text" }
-      - { label: "Featured Post", name: "featuredpost", widget: "boolean" }
-      - { label: "Featured Image", name: "featuredimage", widget: image }
-      - { label: "Body", name: "body", widget: "markdown" }
-      - { label: "Tags", name: "tags", widget: "list" }
+      - { label: 'Template Key', name: 'templateKey', widget: 'hidden', default: 'blog-post' }
+      - { label: 'Título', name: 'title', widget: 'string' }
+      - { label: 'Fecha de publicación', name: 'date', widget: 'datetime' }
+      - { label: 'Descripción', name: 'description', widget: 'text' }
+      - { label: 'Post destacado', name: 'featuredpost', widget: 'boolean' }
+      - { label: 'Imágen destacada', name: 'featuredimage', widget: image }
+      - { label: 'Cuerpo', name: 'body', widget: 'markdown' }
+      - { label: 'Tags (Etiquetas)', name: 'tags', widget: 'list' }
 
-  - name: "pages"
-    label: "Pages"
+  - name: 'paginas'
+    label: 'Páginas'
     files:
-      - file: "src/pages/index.md"
-        label: "Landing Page"
-        name: "index"
+      - file: 'src/pages/index.md'
+        label: 'Home'
+        name: 'index'
         fields:
+          - { label: 'Template Key', name: 'templateKey', widget: 'hidden', default: 'index-page' }
+          - { label: Título, name: title, widget: string }
+          - { label: Imágen, name: image, widget: image }
+          - { label: Encabezado, name: heading, widget: string }
+          - { label: Bajada, name: subheading, widget: string }
           - {
-              label: "Template Key",
-              name: "templateKey",
-              widget: "hidden",
-              default: "index-page",
-            }
-          - { label: Title, name: title, widget: string }
-          - { label: Image, name: image, widget: image }
-          - { label: Heading, name: heading, widget: string }
-          - { label: Subheading, name: subheading, widget: string }
-          - {
-              label: Mainpitch,
+              label: Campo principal,
               name: mainpitch,
               widget: object,
-              fields:
-                [
-                  { label: Title, name: title, widget: string },
-                  { label: Description, name: description, widget: text },
-                ],
+              fields: [{ label: Título, name: title, widget: string }, { label: Descripción, name: description, widget: text }],
             }
-          - { label: Description, name: description, widget: string }
+          - { label: Descripción, name: description, widget: string }
           - {
               label: Intro,
               name: intro,
               widget: object,
               fields:
                 [
-                  { label: Heading, name: heading, widget: string },
-                  { label: Description, name: description, widget: text },
+                  { label: Encabezado, name: heading, widget: string },
+                  { label: Descripción, name: description, widget: text },
                   {
-                    label: Blurbs,
+                    label: Anuncios,
                     name: blurbs,
                     widget: list,
-                    fields:
-                      [
-                        { label: Image, name: image, widget: image },
-                        { label: Text, name: text, widget: text },
-                      ],
+                    fields: [{ label: Imágen, name: image, widget: image }, { label: Texto, name: text, widget: text }],
                   },
                 ],
             }
           - {
-              label: Main,
+              label: Principal,
               name: main,
               widget: object,
               fields:
                 [
-                  { label: Heading, name: heading, widget: string },
-                  { label: Description, name: description, widget: text },
+                  { label: Encabezado, name: heading, widget: string },
+                  { label: Descripción, name: description, widget: text },
                   {
-                    label: Image1,
+                    label: Imágen 1,
                     name: image1,
                     widget: object,
-                    fields:
-                      [
-                        { label: Image, name: image, widget: image },
-                        { label: Alt, name: alt, widget: string },
-                      ],
+                    fields: [{ label: Image, name: image, widget: image }, { label: Alt, name: alt, widget: string }],
                   },
                   {
-                    label: Image2,
+                    label: Imágen 2,
                     name: image2,
                     widget: object,
-                    fields:
-                      [
-                        { label: Image, name: image, widget: image },
-                        { label: Alt, name: alt, widget: string },
-                      ],
+                    fields: [{ label: Image, name: image, widget: image }, { label: Alt, name: alt, widget: string }],
                   },
                   {
-                    label: Image3,
+                    label: Imágen 3,
                     name: image3,
                     widget: object,
-                    fields:
-                      [
-                        { label: Image, name: image, widget: image },
-                        { label: Alt, name: alt, widget: string },
-                      ],
+                    fields: [{ label: Image, name: image, widget: image }, { label: Alt, name: alt, widget: string }],
                   },
                 ],
             }
-      - file: "src/pages/about/index.md"
-        label: "About"
-        name: "about"
+      - file: 'src/pages/institucional/index.md'
+        label: 'Institucional'
+        name: 'institucional'
         fields:
-          - {
-              label: "Template Key",
-              name: "templateKey",
-              widget: "hidden",
-              default: "about-page",
-            }
-          - { label: "Title", name: "title", widget: "string" }
-          - { label: "Body", name: "body", widget: "markdown" }
-      - file: "src/pages/products/index.md"
-        label: "Products Page"
-        name: "products"
+          - { label: 'Template Key', name: 'templateKey', widget: 'hidden', default: 'about-page' }
+          - { label: 'Título', name: 'title', widget: 'string' }
+          - { label: 'Cuerpo', name: 'body', widget: 'markdown' }
+      - file: 'src/pages/products/index.md'
+        label: 'Products Page'
+        name: 'products'
         fields:
-          - {
-              label: "Template Key",
-              name: "templateKey",
-              widget: "hidden",
-              default: "product-page",
-            }
+          - { label: 'Template Key', name: 'templateKey', widget: 'hidden', default: 'product-page' }
           - { label: Title, name: title, widget: string }
           - { label: Image, name: image, widget: image }
           - { label: Heading, name: heading, widget: string }
@@ -159,11 +119,7 @@ collections:
                     label: Blurbs,
                     name: blurbs,
                     widget: list,
-                    fields:
-                      [
-                        { label: Image, name: image, widget: image },
-                        { label: Text, name: text, widget: text },
-                      ],
+                    fields: [{ label: Image, name: image, widget: image }, { label: Text, name: text, widget: text }],
                   },
                 ],
             }
@@ -179,31 +135,19 @@ collections:
                     label: Image1,
                     name: image1,
                     widget: object,
-                    fields:
-                      [
-                        { label: Image, name: image, widget: image },
-                        { label: Alt, name: alt, widget: string },
-                      ],
+                    fields: [{ label: Image, name: image, widget: image }, { label: Alt, name: alt, widget: string }],
                   },
                   {
                     label: Image2,
                     name: image2,
                     widget: object,
-                    fields:
-                      [
-                        { label: Image, name: image, widget: image },
-                        { label: Alt, name: alt, widget: string },
-                      ],
+                    fields: [{ label: Image, name: image, widget: image }, { label: Alt, name: alt, widget: string }],
                   },
                   {
                     label: Image3,
                     name: image3,
                     widget: object,
-                    fields:
-                      [
-                        { label: Image, name: image, widget: image },
-                        { label: Alt, name: alt, widget: string },
-                      ],
+                    fields: [{ label: Image, name: image, widget: image }, { label: Alt, name: alt, widget: string }],
                   },
                 ],
             }
@@ -211,11 +155,7 @@ collections:
               label: Testimonials,
               name: testimonials,
               widget: list,
-              fields:
-                [
-                  { label: Quote, name: quote, widget: string },
-                  { label: Author, name: author, widget: string },
-                ],
+              fields: [{ label: Quote, name: quote, widget: string }, { label: Author, name: author, widget: string }],
             }
           - { label: Full_image, name: full_image, widget: image }
           - {
@@ -234,11 +174,7 @@ collections:
                       [
                         { label: Plan, name: plan, widget: string },
                         { label: Price, name: price, widget: string },
-                        {
-                          label: Description,
-                          name: description,
-                          widget: string,
-                        },
+                        { label: Description, name: description, widget: string },
                         { label: Items, name: items, widget: list },
                       ],
                   },
